# mulprec

./: CMakeLists.txt  README.md  out.txt  start.py  test.sh
.github/workflows/: ci.yml
include/: fft.h  mulprec.h  util.h
src/: CMakeLists.txt  fft.c  main.c  mulprec.c  util.c
test/: CMakeLists.txt  pi.py  test_add.c  test_add.py  test_comp.c  test_comp.py  test_div.c  test_div.py  test_div_single.py  test_fft.c  test_fft.py  test_mul.c  test_mul.py  test_print.c  test_sqrt.c  test_sub.c  test_sub.py  test_test.c
